--- a/index.html
+++ b/index.html
@@ -7,26 +7,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="estilo.css">
-    
+
     <title>BATE PAPO UOL</title>
 </head>
 
 <body>
-    <div class="titulo">
+    <!--<div class="apresentacao ocultar">
         <img src="./assets/imagens/logo.png">
-        <ion-icon name="people-sharp"></ion-icon>
+        <input class="texto" type="text">
+        <button onclick="enviar(this)">
+           <p>Entrar</p>
+        </button>
+    </div>-->
+
+    <div class="container">
+        <div class="titulo">
+            <img src="./assets/imagens/logo.png">
+            <ion-icon name="people-sharp"></ion-icon>
+        </div>
+
+
+        <div class="mensagem">
+            <ul>
+                <li class="mensagem-status nome" onclick="status(this)"></li>
+                <li class="mensagem-reservada"></li>
+                <li class="mensagem-normal"></li>
+            </ul>
+        </div>
+
+
+        <div class="rodape">
+            <input class="text">
+            <ion-icon name="paper-plane-outline"></ion-icon>
+        </div>
     </div>
 
-
-
-    <div class="rodape">
-        <p>Escreva aqui...</p>
-        <ion-icon name="paper-plane-outline"></ion-icon>
-    </div>
-
-
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-    <script src=http://mock-api.driven.com.br/api/v6/uol></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="settings.js"></script>
 </body>
 
