status usuário - js

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <div class="mensagem">
             <ul>
-                <li class="mensagem-status nome" onclick="status(this)"></li>
+                <li class="mensagem-status nome" onclick="conectadosStatus(this)"><p><strong></strong></p><p></p></li>
                 <li class="mensagem-reservada"></li>
                 <li class="mensagem-normal"></li>
             </ul>
