--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
 
         <div class="mensagem">
-            <ul>
-                <li class="mensagem-status nome" onclick="(this)"></li>
+            <ul class = "mensagens">
+                <li class="mensagem-status"></li>
                 <li class="mensagem-reservada"></li>
                 <li class="mensagem-normal"></li>
             </ul>
@@ -37,7 +37,7 @@
 
 
         <div class="rodape">
-            <input class="text">
+            <input type="text" class="text">
             <ion-icon name="paper-plane-outline"></ion-icon>
         </div>
     </div>
