--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ion-icon name="people-sharp"></ion-icon>
         </div>
 
-
+        
         <div class="mensagem" onclick="mensagemScroll(this)">
             <ul class="mensagens">
                 <li class="mensagem-status">
@@ -44,10 +44,9 @@
 
 
         <div class="rodape">
-            <input onClick="reloadThePage()" type="text" placehorlder ="Insira seu texto aqui">
-            <ion-icon name="paper-plane-outline"></ion-icon>
+            <input onClick="reloadThePage, digitarMensagem(this)" type="text" placehorlder ="Insira seu texto aqui">
+            <ion-icon name="paper-plane-outline" classe="icone"></ion-icon>
         </div>
-    </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
