--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
 
-        <div class="mensagem" onclick="mensagemScroll(this)">
+        <div class="mensagem">
             <ul class="mensagens">
                 <li class="mensagem-status">
                     <p><span class="hora"></span> <span class="usuario"></span><span class="status"></span></p>
@@ -41,7 +41,7 @@
                 </li>
             </ul>
             <div class="rodape">
-                <input onClick="exibirMensagem(this)" type="text" placehorlder="Insira seu texto aqui">
+                <input class ="escrever" onclick="exibirMensagem(this)" type="text" placehorlder="Insira seu texto aqui">
                 <ion-icon name="paper-plane-outline" classe="icone"></ion-icon>
             </div>
         </div>
