--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
                     <span class="hora"></span> <span class="usuario"></span><span class="status"></span></p>
                 </li>
             </ul>
+
             <div class="rodape">
-                <input class ="escrever" onclick="exibirMensagem(this)" type="text" placehorlder="Insira seu texto aqui">
-                <ion-icon name="paper-plane-outline" classe="icone"></ion-icon>
+                <input class ="escrever" value ="" placeHolder = "Escreva seu texto aqui..."></input>
             </div>
+                <ion-icon class ="icone"name="paper-plane-outline" onclick="exibirMensagem(this)"></ion-icon>
+            
         </div>
 
 
@@ -52,7 +54,7 @@
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-        <script src="settings.js"></script>
+        <script src="settings.js" defer></script>
 </body>
 
 </html>
